// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider componentConfig.Descriptions default 1`] = `
<div
  class="arco-descriptions arco-descriptions-layout-horizontal"
>
  <div
    class="arco-descriptions-body"
  >
    <table
      cellpadding="0"
      cellspacing="0"
      class="arco-descriptions-table"
    >
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.Descriptions set className globally 1`] = `
<div
  class="arco-descriptions arco-descriptions-layout-horizontal global-default-class"
>
  <div
    class="arco-descriptions-body"
  >
    <table
      cellpadding="0"
      cellspacing="0"
      class="arco-descriptions-table"
    >
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.Descriptions set className globally and component set className itself. 1`] = `
<div
  class="arco-descriptions arco-descriptions-layout-horizontal component-class"
>
  <div
    class="arco-descriptions-body"
  >
    <table
      cellpadding="0"
      cellspacing="0"
      class="arco-descriptions-table"
    >
      <tbody />
    </table>
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.Descriptions set data-* property 1`] = `
<div
  class="arco-descriptions arco-descriptions-layout-horizontal"
>
  <div
    class="arco-descriptions-body"
  >
    <table
      cellpadding="0"
      cellspacing="0"
      class="arco-descriptions-table"
    >
      <tbody />
    </table>
  </div>
</div>
`;
